# telegram-bemyai

./: Dockerfile  LICENSE  README.md  pyproject.toml
telegram_bemyai/: bot.py
