[tool.poetry]
name = "telegram_bemyai"
version = "0.1.0"
description = "Telegram bot that fetches image descriptions from OpenAI GPT-4"
authors = ["Julian Dreykorn <dreykorn.julian@gmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
pyTelegramBotAPI = "^4.14.0"

[tool.poetry.scripts]
telegram_bemyai = "telegram_bemyai.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
